--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "@utils/*": ["./src/utils/*"],
+    "@components/*": ["./src/components/*"],
+    "@pages/*": ["./src/pages/*"],
   }
 }
